# actix-app

./: Cargo.toml  README.md
src/: lib.rs  payments.rs  show.rs  state.rs  ticket.rs  user.rs
src/user_data/: role.rs  user.rs
static/: form.html
