[package]
name = "actix-app"
version = "0.1.0"
authors = ["Brad Haan <brad@dreamstage.live.com>", "Liam Warfield <liam.warfield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
actix-files = "*"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version="0.8.2", features=["serde"] }
chrono = {version="0.4.19", features=["serde"] }